--- a/nashassignment/package.json
+++ b/nashassignment/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
